--- a/_config.yml
+++ b/_config.yml
@@ -18,31 +18,31 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Leandro Fróes # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Malware Researcher & Reverse Engineer  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Just some of my research notes regarding Malware Analysis, Reverse Engineering and Windows Internals.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://leandrofroes.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: leandrofroes # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: leandrofr0es # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Leandro
+  email: # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/leandrofr0es # change to your twitter homepage
+    - https://github.com/leandrofroes # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/29361779
 
 # boolean type, the global switch for TOC in posts.
 toc: true
