--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Leandro Fróes # the main title
+title: Home # the main title
 
 tagline: Malware Researcher & Reverse Engineer  # it will display as the sub-title
 
