--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Home # the main title
-internal_title: Leandro Fróes
+title: Leandro's blog # the main title
 tagline: Malware Researcher & Reverse Engineer  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
